tests/snapshots/scs_segments__lang_mixed.scs.lint.snap
---
source: tests/scs_segments.rs
expression: "lint(\"lang_mixed.scs\")"
---
7:1: warning [floating-node]: node 'in' is connected to only one element
12:1: warning [floating-node]: node '(vdd' is connected to only one element
13:1: warning [floating-node]: node '(d' is connected to only one element
13:1: warning [floating-node]: node 'g' is connected to only one element
14:1: warning [dangling-rc-endpoint]: node '(a' terminates a passive network with no other connection
14:1: warning [dangling-rc-endpoint]: node 'b)' terminates a passive network with no other connection
17:1: warning [dangling-rc-endpoint]: node 'a' terminates a passive network with no other connection
17:1: warning [dangling-rc-endpoint]: node 'b' terminates a passive network with no other connection
