tests/snapshots/scs_segments__no_lang.sp.lint.snap
---
source: tests/scs_segments.rs
expression: "lint(\"no_lang.sp\")"
---
6:1: warning [blank-after-ends]: at least one empty line required after .ends
